objects/LLC_BI__Policy_Exception_Mitigation_Reason__c.object
<CustomObject>
    <description>The object stores the Policy Exception Mitigation Reasons that will be presented to the user during the policy exception process.</description>
    <fields>
        <fullName>LLC_BI__Comment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field on the Policy Exception Mitigation Reason object is an optional checkbox.  When the field is selected, the user is required to enter in a comment when selecting the mitigation reason it is configured for.</description>
        <label>Comment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_Exception_Template__c</fullName>
        <description>The field is a Master-Detail field to the policy exception template record that this mitigation reason is associated to. This field is required and allows the appropriate mitigation reasons to be displayed when the policy exception is cited.</description>
        <label>Policy Exception Template</label>
        <referenceTo>LLC_BI__Policy_Exception_Template__c</referenceTo>
        <relationshipLabel>Policy Exception Mitigation Reasons</relationshipLabel>
        <relationshipName>Policy_Exception_Mitigation_Reasons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reason__c</fullName>
        <description>The field is required and specifies the name/ text description. It defines the Policy Exception mitigation reason.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This is an optional field that is used to specify an external, unique key for this record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Policy Exception Mitigation Reason</label>
    <nameField>
        <displayFormat>PEMR-{00000}</displayFormat>
        <label>Policy Exception Mitigation Reason Numbe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Exception Mitigation Reasons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>